--- a/1-ethical_theory/1.1-philosophical_ethics.md
+++ b/1-ethical_theory/1.1-philosophical_ethics.md
@@ -12,4 +12,27 @@ Covers pages 17-21 from chapter 2 of the textbook.
 
 ---
 
+### Three Types Of Ethical Inquiry
 
+#### Normative Ethics
+
+* **Normative ethics** is concerned with general abstract questions about what makes certain things (acts, people, policies, etc) right or wrong.
+* When considering the morality of an act, should we only consider the consequences of the act? Or does the person's motives matter as well? If someone does an evil thing for what they perceive to be good reasons, are they unethical?
+* Importantly, normative ethics is **prescriptive** - it tells us how we ought to act.
+* When arguing a position in normative ethics, the steps we follow are:
+	1. Defining key concepts:
+		* For example, when debating the ethics of abortion, we should first define what abortion means in this case.
+	2. Identifying relevant facts:
+		* Continuing with the abortion example, we need to know when prognancy begins, when (if ever) fetuses are conscious, the risks of pregnancy to the woman, etc.
+	3. See if the morality of the act in question is congruent with moral principles we would be willing to accept.
+
+#### Descriptive Ethics
+
+* **Descriptive ethics** is concerned with what a given population believes is moral or immoral.
+* For example, a descriptive ethical question could be "What percentage of Canadians believe abortion is immoral?".
+* It is generally the concern of anthropologists and social scientists rather than philosophers.
+
+#### Metaethics
+
+* **Metaethics** is concerned with the nature of morality itself. It doesn't ask whether an act is moral or immoral, but rather what makes things moral or immoral.
+* For example, do we derive our ethics from God? Are they a social construct that has no meaning outside of our species? Is there something that makes certain actions inherently ethical or unethical?
