Fixed markdown error

--- a/1-ethical_theory/1.4-utilitarianism.md
+++ b/1-ethical_theory/1.4-utilitarianism.md
@@ -27,16 +27,16 @@ Covers pages 24-34 of the textbook.
 #### Objections to Classical Act Utilitarianism
 
 1. Against consequentialism:
-	a. It is too simple: the morality of an act depends on more than just the pleasure and pain it causes. For example, imagine a voyeur installs a camera in a locker room, that no one knows about. It causes no distress to the victims since they don't even realize it exists, and it brings pleasure to the voyeur. Utilitarianism not only condones this, but in fact it morally necessitates it.
-	b. It is difficult for us to understand the long-term consequences of our actions. We're often only able to consider the immediate moral implications of our actions and not their effects years or decades down the line. It's possible that acts that cause the greatest net pleasure now may in fact cause more net pain in the long-term.
+	* It is too simple: the morality of an act depends on more than just the pleasure and pain it causes. For example, imagine a voyeur installs a camera in a locker room, that no one knows about. It causes no distress to the victims since they don't even realize it exists, and it brings pleasure to the voyeur. Utilitarianism not only condones this, but in fact it morally necessitates it.
+	* It is difficult for us to understand the long-term consequences of our actions. We're often only able to consider the immediate moral implications of our actions and not their effects years or decades down the line. It's possible that acts that cause the greatest net pleasure now may in fact cause more net pain in the long-term.
 		* Note: this doesn't actually disprove utilitarianism, it merely shows that it is impractical.
 2. Against Hedonism:
-	a. Pleasure is not always intrinsically good, and other things may be intrinsically good besides pleasure.
+	* Pleasure is not always intrinsically good, and other things may be intrinsically good besides pleasure.
 		* For example, pleasures derived from violating the rights of others.
 		* Another famous example is Robert Novick's Experience Machine - Imagine a machine is invented that allows the user to enter and have any simulated experience they desire. The machine keeps them alive, and while they're inside they don't realize that they're actually in a machine. Many would argue that even though this machine can maximize pleasure and minimize pain, there is something intrinsically worse about these pleasures because they don't actually exist.
 3. Against Equal Consideration:
-	a. It isn't able to recognize the value of special relationships. Under equal consideration, we cannot value our friends and family over strangers - choosing to take your child to a movie is unethical when you could instead spend that time volunteering and donate the money you would've spend on movie tickets to charity instead.
-	b. It is too demanding. Utilitarianism also demands that you devote as much time as possible to maximizing good for others. This means no vacations, no personal hobbies, and you definitely can't spend your sunday afternoons in bed watching TV. All your free time and all your excess income must be devoted to the greater good.
+	* It isn't able to recognize the value of special relationships. Under equal consideration, we cannot value our friends and family over strangers - choosing to take your child to a movie is unethical when you could instead spend that time volunteering and donate the money you would've spend on movie tickets to charity instead.
+	* It is too demanding. Utilitarianism also demands that you devote as much time as possible to maximizing good for others. This means no vacations, no personal hobbies, and you definitely can't spend your sunday afternoons in bed watching TV. All your free time and all your excess income must be devoted to the greater good.
 
 #### Utilitarian Responses
 
